# equinax

./: .env.docker  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  justfile
backend/: .env.example  alembic.ini  cmd.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/scripts/: timescaledb_setup.sql
backend/alembic/versions/: 0001_init_timescaledb.py  20251206_160459_3765a84e407b_init_db_schema.py  20251210_021202_63f9700ffb44_initial.py  20251212_115516_0219bb2f37c2_add_strategy_snapshots_to_backtest_jobs.py  20251213_031528_6f64fd38d2fb_add_stock_pool_tables.py  20251218_144427_3f56b2b929aa_initial_schema.py  20251223_162505_ed4a0e4392b1_remove_northbound_institutional_fields.py  20251223_180000_add_em_industry_field.py  20251224_120000_add_index_profile_sync_history.py  20260110_120000_add_etf_classification_fields.py  642576ce6ede_initial_schema.py  a243d04a5545_add_new_field.py
backend/app/: __init__.py  config.py  main.py
backend/app/cli/: __init__.py  db.py  seed.py
backend/app/core/: arq.py  redis_pubsub.py
backend/app/db/: __init__.py  session.py
backend/data/: README.md  __init__.py
backend/data/downloads/: __init__.py  base.py  download_a_stock_data.py  (+6 more)
backend/docker/: Dockerfile
backend/scripts/: __init__.py  backtest_etf_prediction.py  classify_etfs.py  compute_classifications.py  data_cli.py  download_fixtures.py  fix_missing_sync.py  fixtures.py  generate_fixtures.py  import_index_constituents.py  import_institutional_holdings.py  import_market_cap.py  import_northbound_holdings.py  import_sw_industry.py  migrate_all_data.py  migrate_sqlite.py
backend/workers/: __init__.py  backtest_tasks.py  batch_sync.py  classification_tasks.py  data_tasks.py  index_tasks.py  indicator_tasks.py  settings.py
(+164 files in other folders)
