[project]
name = "quant-backtest"
version = "0.1.0"
description = "Production-grade quantitative trading backtesting system"
authors = [{ name = "Dan" }]
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Task queue
    "arq>=0.25.0",
    "redis>=5.0.1",

    # Backtesting
    "backtrader>=1.9.78",
    "pandas>=2.1.4",
    "numpy>=1.26.3",

    # Technical analysis (ta library uses pure Python)
    "ta>=0.11.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Utilities
    "httpx>=0.26.0",
    "orjson>=3.9.12",
    "python-dotenv>=1.0.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.0.0",

    # Data sources
    "akshare>=1.12.0",
    "baostock>=0.8.8",
    "tqdm>=4.66.0",
]

[project.scripts]
cmd = "cmd:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workers*", "data*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
